# shoutbase-timesheet-generator

./: README.md  pyproject.toml
shoutbase_timesheet_generator/: main.py
